--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,4 +1,5 @@
-all: -r features --tags=~@upcoming --format pretty --format rerun --out tmp/rerun.txt --format junit --out tmp/junit --format html --out tmp/html/cucumber_all.html
-default: -r features --tags=~@upcoming --format pretty --format rerun --out tmp/rerun.txt --format junit --out tmp/junit --format html --out tmp/html/cucumber_all.html
+all: -r features --tags=~@upcoming --tags=~@encoding --format pretty --format rerun --out tmp/rerun.txt --format junit --out tmp/junit --format html --out tmp/html/cucumber_all.html
+default: -r features --tags=~@upcoming --tags=~@encoding --format pretty --format rerun --out tmp/rerun.txt --format junit --out tmp/junit --format html --out tmp/html/cucumber_all.html
 rerun: "-r features @tmp/rerun.txt --format pretty --format junit --out tmp/junit --format rerun --out tmp/rererun.txt"
-profiling: -r features --no-color  --format pretty --format usage --out tmp/cucumber_usage.txt --format rerun --out tmp/rerun.txt
+profiling: -r features --tags=~@encoding --no-color  --format pretty --format usage --out tmp/cucumber_usage.txt --format rerun --out tmp/rerun.txt
+encoding: --tags=@encoding
