Dilps importer for Susannes old dilps-data
remove type from create_stet_by_title
Squashed commit of the following:

also renindex

commit af9d3eb50ba1e19a19b22b0763867e59c2c2193b
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Jun 11 15:43:50 2013 +0200

    Adding the case for description::string

commit df68641fcef5975cb01f962b824829a3e0ec21e7
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Jun 11 14:26:10 2013 +0200

    Reverting meta_datum patches

commit 796345c8d29d9f1df0e3f510237ef45c5f9a3888
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Jun 11 12:54:57 2013 +0200

    Importing more fields from item_rev

commit b4fec2595350e0f167fc5a07dfec33692562c3e4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Jun 11 11:05:35 2013 +0200

    Fix issue where source would not be complete

    use + instead of << on strings, the latter mutates; it should not matter
    in this case but it (sometimes!) does

commit 093ac5fafb789f0bc6c68e54b70cdc569ad608c1
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 15:47:21 2013 +0200

    Workaround where resource_rev is not present

commit 9f8d60c23cf116383bf2521b48ba3a9f14d8ada3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 11:28:05 2013 +0200

    Fix

commit 02410c45c365a97820bcff4684fd77390463bf83
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 11:25:20 2013 +0200

    one more level of wrapping

commit 715f32a6395a3ffe059c06d8a675761f9fbe2d39
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 11:16:18 2013 +0200

    Try globbing rescue

commit 40e291a06b157db41c55662cabd307bc056aa3c4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 08:39:23 2013 +0200

    Completed susannes import groups and rescue existing SQL addition

commit bfba3fb905d56f4fdd3971351b3a3407b3681e84
Author: Thomas Schank <DrTom@schank.ch>
Date:   Mon Jun 10 07:43:27 2013 +0200

    Added import data from more than one user

commit 9ae1f1bb4b6324dffe6899f2f3c5efcf4587d7c1
Author: Thomas Sc

--- a/config/database_developer_example.yml
+++ b/config/database_developer_example.yml
@@ -26,4 +26,10 @@ production:
   <<: *default
   database: madek_prod
 
+dilps: 
+  adapter: mysql2
+  database: dilps
+  host: localhost
+  username: root
+  pool: 5
 
