Domina: configured log attachment

--- a/domina_rails/execution/specification.yml
+++ b/domina_rails/execution/specification.yml
@@ -2,8 +2,15 @@
 name: Madek
 environments:
 - linux
+- postgresql
+- rbenv
 - ruby-1.9.3
-- x-server
+- tightvncserver
+
+attachments: 
+  logs: 
+    glob: 'log/*.log'
+    content-type: text/plain
 
 contexts:
 - name: environment 
