--- a/domina_rails/execution/specification.yml
+++ b/domina_rails/execution/specification.yml
@@ -11,6 +11,9 @@ attachments:
   logs: 
     glob: 'log/*.log'
     content-type: text/plain
+  screenshots: 
+    glob: 'tmp/capybara/*.png'
+    content-type: image/png
 
 contexts:
 - name: environment 
