Added admin_interface feature to the domina tasks

--- a/domina/execution/feature_tasks.yml
+++ b/domina/execution/feature_tasks.yml
@@ -1,4 +1,8 @@
 ---
+- name: admin_interface
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_interface.feature"
 - name: admin_media_sets
   scripts:
     cucumber:
