Trying to get the delete feature test more stable

--- a/domina/execution/features_and_specs.yml
+++ b/domina/execution/features_and_specs.yml
@@ -15,6 +15,9 @@ attachments:
     glob: 'tmp/capybara/*.png'
     content-type: image/png
 
+env_vars: 
+  TERM: vt100
+
 contexts:
 
 - name: meta
