--- a/domina/execution/features_and_specs.yml
+++ b/domina/execution/features_and_specs.yml
@@ -15,8 +15,15 @@ attachments:
     glob: 'tmp/capybara/*.png'
     content-type: image/png
 
-env_vars: 
+environment_variables: 
   TERM: vt100
+  RUBY_VERSION: ruby-1.9.3
+
+ports:
+  xvnc_port: 
+    inet_address: "localhost"
+    min: 5900
+    max: 5999
 
 contexts:
 
@@ -41,6 +48,7 @@ contexts:
 - name: rspec specs
   scripts:
     bundle: 
+      timeout: 500
       order: 2
       type: prepare_executor
       body: "substitute_with_path: domina/scripts/bundle.sh"
@@ -59,6 +67,7 @@ contexts:
 - name: cucumber features 
   scripts:
     bundle: 
+      timeout: 500
       order: 1
       type: prepare_executor
       body: "substitute_with_path: domina/scripts/bundle.sh"
