CustomUrls for MediaResources
Squashed commit of the following:

commit a2c191a7076dfb0f27238413e5216e83f46096b3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Feb 28 13:10:07 2014 +0100

    Testing permissions for custom_url controller

commit 865650c15447068c70141f10a39d766585caf3a2
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Feb 28 10:36:07 2014 +0100

    Testing (and implemented) creating urls quickly as ueberadmin

commit 93fd5d5390b8591c0fbc946659c6a0a3989a133a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Feb 28 10:25:55 2014 +0100

    Testing creating urls too quickly is not allowed

commit 703c1be50f7b7f69eed619b1d1ff47de663e2aa0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Feb 28 10:15:34 2014 +0100

    Testing URL transfer

commit 6eeea02118956704b79b40c2606912dea61f3a8e
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Feb 28 08:49:11 2014 +0100

    Implementing and testing primary urls

commit 2a6dde9f6fe45afca722e1e1c5eb0a5a3b9fb39a
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Feb 26 13:51:51 2014 +0100

    Wip feature test cust url, new matcher for click on

commit cbe3fc58b272dd9919f049dc89f66bb59a2f5c1f
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Feb 26 11:10:21 2014 +0100

    Use proper (but font-awesome icon) for url

commit 1a9074d3c74cfa56dea3a58b69aeb883271e55db
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Feb 26 10:45:59 2014 +0100

    Refactored ui and ux

commit 274de976f8f2e01162ff3385b05acc3068e1eb14
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Feb 26 09:19:21 2014 +0100

    Added updator and creator to custom_urls, WIP refactoring appearance

commit 64ad16ce6e3f1dc11347120792c786fcad7ee6c0
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 25 16:50:44 2014 +0100

    Show actions only if permitted to act

commit 8d07ce974f14fb08fa41b65273e502b22f152ded
Author: Thomas Schank <DrTom@schank.ch>
Date:   Tue Feb 25 14:53:16 2014 +0100

    Prevent eager URL creation and sen

--- a/domina/execution/feature_tasks.yml
+++ b/domina/execution/feature_tasks.yml
@@ -55,6 +55,10 @@
   scripts:
     cucumber:
       body: bundle exec cucumber --strict "features/context.feature"
+- name: custom_urls
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/custom_urls.feature"
 - name: dashboard_page
   scripts:
     cucumber:
