--- a/domina/execution/rspec_tasks.yml
+++ b/domina/execution/rspec_tasks.yml
@@ -7,6 +7,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/application_controller_spec.rb"
+- name: controllers custom_urls_controller
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/custom_urls_controller_spec.rb"
 - name: controllers download_controller
   scripts:
     rspec:
@@ -39,6 +43,22 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/media_resource_arcs_controller_spec.rb"
+- name: controllers media_resources api_security
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/media_resources/api_security_spec.rb"
+- name: controllers media_resources delete
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/media_resources/delete_spec.rb"
+- name: controllers media_resources index
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/media_resources/index_spec.rb"
+- name: controllers media_resources sorting
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/media_resources/sorting_spec.rb"
 - name: controllers media_sets show
   scripts:
     rspec:
@@ -91,22 +111,6 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/zencoder_jobs_spec.rb"
-- name: controllers media_resources api_security
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/controllers/media_resources/api_security_spec.rb"
-- name: controllers media_resources delete
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/controllers/media_resources/delete_spec.rb"
-- name: controllers media_resources index
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/controllers/media_resources/index_spec.rb"
-- name: controllers media_resources sorting
-  scripts:
-    rspec:
-      body: bundle exec rspec "spec/controllers/media_resources/sorting_spec.rb"
 - name: misc exiftool
   scripts:
     rspec:
