Testing import#upload with rspec
and some more:

Squashed commit of the following:

commit ba3d80860d6b9d5d3a89fa24b58abccefb3379e8
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Mar 14 13:51:05 2014 +0100

    Testing upload

commit 05c6c0cf0141134afb19a0bb3f096cc9160c31f4
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Mar 14 13:15:40 2014 +0100

    Don't require format on import#upload and initial upload test

commit 002515aedf67e9f974b6bc5fc61d76ba926cdcf3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Mar 14 13:03:13 2014 +0100

    Moved import_controller delete spec

--- a/domina/execution/rspec_tasks.yml
+++ b/domina/execution/rspec_tasks.yml
@@ -27,6 +27,14 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/groups_controller_spec.rb"
+- name: controllers import_controller delete
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/import_controller/delete_spec.rb"
+- name: controllers import_controller upload
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/import_controller/upload_spec.rb"
 - name: controllers import_controller zencoder_job
   scripts:
     rspec:
