Refactore dropbox import, correct verbs; junk nonsense; add spec
Squashed commit of the following:

commit fdfe338520265016ae3fa070155e22bd376ca055
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 19 10:25:02 2014 +0100

    Added spec for dropbox_import

commit b224e527725bf5c94d69d8a590fc209c9295de46
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 19 09:38:41 2014 +0100

    Minor cleanup of import#dropbox_import

commit 19fe3897470d2d0c46ab57469e3a19a916f25df2
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 19 09:31:26 2014 +0100

    Removed dropbox_import_spec for now

commit 87b6cb71106c7697a59a9920f1cdf249e2c03cb1
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 19 09:30:33 2014 +0100

    Put some sense into upload verbs

commit 23f26ac4ffef842e80c28285739f1a746f86916d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed Mar 19 09:23:00 2014 +0100

    Started to refactor dropbox

--- a/domina/execution/rspec_tasks.yml
+++ b/domina/execution/rspec_tasks.yml
@@ -31,6 +31,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/controllers/import_controller/delete_spec.rb"
+- name: controllers import_controller dropbox_import
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/controllers/import_controller/dropbox_import_spec.rb"
 - name: controllers import_controller upload
   scripts:
     rspec:
