--- a/config/database_cider-ci_template.yml
+++ b/config/database_cider-ci_template.yml
@@ -1,14 +1,12 @@
 default: &default
   adapter: postgresql
   encoding: utf8
-  username: domina
-  password: domina
+  username: some_user
+  password: some_password
+  port: 5432
   pool: 5
 
 test: 
   <<: *default
   database: madek_test
 
-personas: 
-  <<: *default 
-  database: madek_personas_test
