--- a/cider-ci/all_tests.yml
+++ b/cider-ci/all_tests.yml
@@ -1,132 +1,28 @@
 ---
 name: Madek
-traits:
-- firefox
-- imagemagick
-- libimage-exiftool-perl
-- linux
-- pg93
-- phantomjs
-- rbenv
-- ruby
-- tightvnc
-
-attachments: 
-  logs: 
-    glob: 'log/*.log'
-    content-type: text/plain
-  screenshots: 
-    glob: 'tmp/capybara/*.png'
-    content-type: image/png
-
-environment_variables: 
-  TERM: vt100
-  RAILS_ENV: test
-
-ports:
-  xvnc_port: 
-    inet_address: "localhost"
-    min: 5900
-    max: 5999
+traits: "substitute_with_path: cider-ci/partials/traits.yml"
+attachments: "substitute_with_path: cider-ci/partials/attachments.yml"
+environment_variables: "substitute_with_path: cider-ci/partials/environment_variables.yml"
+ports: "substitute_with_path: cider-ci/partials/ports.yml"
 
 contexts:
 
-- name: Meta
-  priority: 7
-  tasks:
-
-  - name: Show environment
-    scripts:
-      main:
-        body: env | sort
-
-  - name: List working directory
-    scripts:
-      main:
-        body: ls -lah
-
-  - name: Git log of last commits
-    scripts:
-      main:
-        body: git log -n 3
-
-
-- name: Completness of CI tasks
-
-  priority: 7
-
-  tasks:
-
-    - name: All spects are tested?
-      scripts:
-        main: 
-          body: cider-ci/bin/all_specs_tested.rb
-
-    - name: All features are tested?
-      scripts:
-        main: 
-          body: cider-ci/bin/all_features_tested.rb 
-
-
-- name: cucumber features 
+- name: Cucumber
   priority: 5
-  scripts:
-    bundle: 
-      timeout: 500
-      order: 1
-      type: prepare_executor
-      body: bundle
-    configer_db:
-      order: 2
-      body: cider-ci/bin/create_db_config_file.rb
-    setup_database:
-      order: 3
-      body: bundle exec rake db:reset 
-    setup_madek:
-      order: 4
-      body: bundle exec rake madek:setup:dirs 
-    startx:
-      order: 4
-      body: tightvncserver ":$XVNC_PORT"  -geometry 1024x768 -rfbport "$XVNC_PORT" -interface 127.0.0.1
-    cucumber: 
-      order: 5
-      body: export DISPLAY=":$XVNC_PORT"
-    drop_test_db: 
-      order: 8
-      type: post_process
-      body: bundle exec rake db:drop
-    stopx: 
-      order: 9
-      type: post_process
-      body: tightvncserver -kill ":$XVNC_PORT" -clean
+  scripts: "substitute_with_path: cider-ci/partials/cucumber_context_scripts.yml"
   tasks: "substitute_with_path: cider-ci/tasks/cucumber.yml"
 
-
 - name: Rspec 
-
   priority: 3
-
-  scripts:
-    bundle: 
-      timeout: 500
-      order: 1
-      type: prepare_executor
-      body: bundle
-    configer_db:
-      order: 2
-      body: cider-ci/bin/create_db_config_file.rb
-    setup_database:
-      order: 3
-      body: bundle exec rake db:reset 
-    setup_madek:
-      order: 4
-      body: bundle exec rake madek:setup:dirs 
-    rspec:
-      order: 5
-    drop_test_db: 
-      order: 8
-      type: post_process
-      body: bundle exec rake db:drop
+  scripts: "substitute_with_path: cider-ci/partials/rspec_context_scripts.yml"
   tasks: "substitute_with_path: cider-ci/tasks/rspec.yml"
     
+- name: Meta
+  priority: 7
+  tasks: "substitute_with_path: cider-ci/tasks/meta.yml"
+
+- name: Completness of CI tasks
+  priority: 7
+  tasks:
+  tasks: "substitute_with_path: cider-ci/tasks/completeness.yml"
 
