New vocabulary builder for context
commit d518e0a9858c22e534c39e155da0e03d608357a2
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed May 14 09:31:56 2014 +0200

    Complete test and use consistently symbols everywhere

commit 2fa1821e8c64439e31d506a2563770637be5088d
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed May 14 09:10:49 2014 +0200

    New test for building vocabulary ... tbc

commit f8f08e90277b55172598de09391f3c5a07492b00
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed May 14 08:42:27 2014 +0200

    More readable code

commit 6818196b621885c78e557cf23c7b0f59e8afd505
Author: Thomas Schank <DrTom@schank.ch>
Date:   Wed May 14 08:39:51 2014 +0200

    Extracted vocabulary query and modularized it

--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -191,6 +191,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/models/media_set_spec.rb"
+- name: models meta_context vocabulary
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/models/meta_context/vocabulary_spec.rb"
 - name: models meta_context_group
   scripts:
     rspec:
