admin: Improvement metacontexts and metacontext groups
delivers [#72166730]

Squashed commits:

admin can add meta keys to meta context

admin can remove a context from a context group

admin can delete a context

admin can delete meta key from a context

resolve depreciation warnings

fix meta context delete from meta conntext group

run tests for admin_meta_contexts

--- a/cider-ci/tasks/cucumber.yml
+++ b/cider-ci/tasks/cucumber.yml
@@ -11,6 +11,10 @@
   scripts:
     cucumber:
       body: bundle exec cucumber --strict "features/admin_media_sets.feature"
+- name: admin_meta_contexts
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_meta_contexts.feature"
 - name: admin_meta_keys
   scripts:
     cucumber:
