--- a/cider-ci/tasks/cucumber.yml
+++ b/cider-ci/tasks/cucumber.yml
@@ -15,6 +15,10 @@
   scripts:
     cucumber:
       body: bundle exec cucumber --strict "features/admin_meta_contexts.feature"
+- name: admin_meta_context_groups
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_meta_context_groups.feature"
 - name: admin_meta_keys
   scripts:
     cucumber:
