--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -123,6 +123,12 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/features/batch/update_metadata_spec.rb"
+- name: features filter_set filter_set
+  eager_trials: 2
+  auto_trials: 6
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/features/filter_set/filter_set_spec.rb"
 - name: features search transfer_meta_datum_people
   scripts:
     rspec:
