Add group improvements in admin panel

--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -159,6 +159,10 @@
   scripts:
     rspec:
       body: bundle exec rspec "spec/features/search/updated_meta_datum_spec.rb"
+- name: features groups search_group_related_media
+  scripts:
+    rspec:
+      body: bundle exec rspec "spec/features/groups/search_group_related_media_spec.rb"
 - name: helpers app_admin media_sets_helper
   scripts:
     rspec:
