--- a/cider-ci/tasks/rspec.yml
+++ b/cider-ci/tasks/rspec.yml
@@ -124,6 +124,8 @@
     rspec:
       body: bundle exec rspec "spec/features/batch/update_metadata_spec.rb"
 - name: features filter_set filter_set
+  eager_trials: 2
+  auto_trials: 6
   scripts:
     rspec:
       body: bundle exec rspec "spec/features/filter_set/filter_set_spec.rb"
