Admin interface: keyword list and tests thereof
Squashed commit of the following:

commit 2e9e601999325f795c2c172a72d7ee25c73c9f50
Author: Michał Podlecki <m.podlecki@op.pl>
Date:   Mon Jun 9 13:26:28 2014 +0200

    Squashed commits:

    - Admin interface: keyword list
    - tests for keyword list
    - delete searchable field and create indexes directly on the term field

--- a/cider-ci/tasks/cucumber.yml
+++ b/cider-ci/tasks/cucumber.yml
@@ -19,6 +19,10 @@
   scripts:
     cucumber:
       body: bundle exec cucumber --strict "features/admin_contexts.feature"
+- name: admin_keywords
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_keywords.feature"
 - name: admin_meta_key_definitions
   scripts:
     cucumber:
