--- a/cider-ci/tasks/cucumber.yml
+++ b/cider-ci/tasks/cucumber.yml
@@ -1,4 +1,8 @@
 ---
+- name: admin_admin_users
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_admin_users.feature"
 - name: admin_context_groups
   scripts:
     cucumber:
