Admin interface: - ability to set special sets - display a proper notice, when special set has not been updated

--- a/cider-ci/tasks/cucumber.yml
+++ b/cider-ci/tasks/cucumber.yml
@@ -51,6 +51,10 @@
   scripts:
     cucumber:
       body: bundle exec cucumber --strict "features/admin_previews.feature"
+- name: admin_settings
+  scripts:
+    cucumber:
+      body: bundle exec cucumber --strict "features/admin_settings.feature"
 - name: admin_specify_links_and_logo
   scripts:
     cucumber:
