Configure dropbox from config file instead of db
This is a prerequisite to use ansible.

Squashed commit of the following:

commit e9db3ed7624dfa1c5f10fcc20b688f9c015200f1
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 8 12:49:15 2014 +0200

    Fix tests and improve dropbox default settings

commit 659a9f7925b3da2576c953544db3e17123e37db3
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 8 11:49:53 2014 +0200

    Fix

commit 557a9076630bf68a0e96104912e11bd09d157f12
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 8 11:29:06 2014 +0200

    Replace db-dropbox-config with file-dropbox-config

commit 01f6ba733c2ffa2a138b7a91a1bf423adabc3ea6
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 8 11:12:42 2014 +0200

    Remove dropbox settings from database and put it into config files

commit 96f6d6b4e7bb4ff5082ae29fb264e0c4c64b147c
Author: Thomas Schank <DrTom@schank.ch>
Date:   Fri Aug 8 10:48:56 2014 +0200

    Add rails-config gem

--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,6 @@ log/*.log
 log/searchd.development.pid
 log/searchd.test.pid
 rerun*.txt
+config/settings.local.yml
+config/settings/*.local.yml
+config/environments/*.local.yml
