Remove and ignore some paths (plays nicer with ansible)

--- a/.gitignore
+++ b/.gitignore
@@ -3,36 +3,31 @@
 *~
 .DS_Store
 .bundle
+.cluos/
 .git
+.idea/
 .jhw-cache
 .project
 .rbenv-version
-.ruby-version
 .ruby-gemset
+.ruby-version
 .rvmrc
 .sass-cache/
 .yardoc
-/.cluos/
-/.idea/
-/config/database.yml
-/coverage/
-/coverage/**
-/coverage/**/*
-/public/assets/
-/public/previews/
-/tmp/
 config/*.conf
 config/*.conf_with_pipe
 config/LDAP.yml
 config/database.yml
 config/definitions/metadata/ExifTool_config.pl
+config/environments/*.local.yml
+config/secrets.yml
+config/settings.local.yml
+config/settings/*.local.yml
 config/sphinx.yml
 config/sphinx.yml.tpo
 config/test.sphinx.conf.tpo
 config/zencoder.yml
-coverage.data
-coverage/**
-coverage/**/*
+coverage/
 db/backups
 db/development_structure.sql
 db/empty_medienarchiv_instance_with_personas.mysql.migrated.sql
@@ -42,11 +37,13 @@ db/production_structure.sql
 db/schema.rb
 db/sphinx/
 db/test_structure.sql
+deb/seeds.rb
 doc/api/yard
 log/*.log
 log/searchd.development.pid
 log/searchd.test.pid
+public/assets/
+public/previews/
 rerun*.txt
-config/settings.local.yml
-config/settings/*.local.yml
-config/environments/*.local.yml
+tmp/
+vendor/bundle/
