Move dropbox settings to dedicated file

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,7 @@ config/definitions/metadata/ExifTool_config.pl
 config/environments/*.local.yml
 config/secrets.yml
 config/settings.local.yml
+config/dropbox.local.yml
 config/settings/*.local.yml
 config/sphinx.yml
 config/sphinx.yml.tpo
